HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameDiagnostic/Expected.uv
//! Expected diagnostic metadata for the FrameDiagnostic rejected-source specimen.

expectedDiagnostic("E-MEM-1207", "diag.18.Frame")
